@@ -62,8 +62,8 @@
 -(void) setPropagation: (BOOL) p;
 -(void) inside;
 -(void) outside;
--(void) up;
--(void) down;
+-(void) up: (NSNumber*) speed;
+-(void) down: (NSNumber*) speed;
 -(void) mute;
 -(BOOL) isMuted;
 -(void) show;
@@ -101,9 +101,9 @@
 -(void) notify: (NSArray*) values;
 -(BOOL) previous;
 -(BOOL) next;
--(void) upDown_: (NSString*) selname;
--(void) up;
--(void) down;
+-(void) upDown_: (NSString*) selname speed: (int64_t) speed;
+-(void) up: (int64_t) sp;
+-(void) down: (int64_t) sp;
 -(void) inside;
 -(void) outside;
 -(void) mute;
