@@ -71,8 +71,8 @@
 -(void) outside;
 -(void) previous;
 -(void) next;
--(void) up;
--(void) down;
+-(void) up: (int64_t) speed;
+-(void) down: (int64_t) speed;
 -(void) mute;
 -(void) switchValue;
 -(int) width;
